# chainlit-mcp-sql-demo

./: README.md
demo/: app.py  pyproject.toml
